# exercise_c

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/: copilot-instructions.md
.zed/: debug.json  settings.json  tasks.json
docs/: bit-byte-word-cheatsheet.md  csapp_vocabulary.md
resources/: config.properties  zlog.conf
src/: main.c
src/exercise/: exercise.c
src/include/exercise/: exercise.h
src/include/log/: log.h
src/include/util/: time_util.h
src/log/: log.c
src/util/: time_util.c
